--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.2.2",
     "daisyui": "^2.15.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
