--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.2.2",
+    "chart.js": "^4.2.1",
     "daisyui": "^2.15.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-jwt": "^1.1.8",
